--- a/src/small_card.css
+++ b/src/small_card.css
@@ -10,21 +10,6 @@
   
   }
   
-  .card_container {
-    display: grid;
-    grid-template-columns: repeat(3, 350px);
-    /* grid-template-columns: repeat(auto-fill, minmax(350px, 350px)); */
-    grid-gap: 40px;
-    padding-top: 25px;
-    padding-bottom: 25px;
-  }
-  
-  .card_column {
-    display: inline-block;
-    width: 20%;
-    padding: 0 25px;
-  }
-  
   .smallcard {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
     transition: 0.3s;
@@ -44,11 +29,7 @@
     padding-left: 20px;
   }
   
-  @media screen and (max-width: 1200px) {
-    .card_container {
-        grid-template-columns: repeat(auto-fill, minmax(350px, 350px));
-    }
-  }
+
   
   .smallcard img {
     height: 75px;
